# IITISoC-22-Auto3-LiDAR-Obstacle-Avoidance-Robots

./: README.md  VLP-16.urdf.xacro  sick_lms1xx.urdf.xacro
hdl_people_tracking-master/: CMakeLists.txt
hdl_people_tracking-master/launch/: hdl_people_tracking.launch
hebi_a-2084-01_moveit_config/: CMakeLists.txt  package.xml
hebi_a-2084-01_moveit_config/config/: A-2084-01.srdf  ompl_planning.yaml  ros_controllers.yaml
hebi_a-2084-01_moveit_config/launch/: a-2084-01_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
hebi_cpp_api_examples/: CMakeLists.txt  README.md  package.xml
hebi_cpp_api_examples/action/: ArmMotion.action
hebi_cpp_api_examples/config/: A-2084-01_params.yaml  A-2085-04_params.yaml  A-2085-05_params.yaml  A-2085-06_params.yaml  A-2240-05_params.yaml  A-2240-06_params.yaml  diff_drive_params.yaml  group_params.yaml  mecanum_base_params.yaml  omni_base_params.yaml  parallel-gripper_params.yaml  tready_base_params.yaml
hebi_cpp_api_examples/config/gains/: A-2085-04_gains.xml  A-2240-05_gains.xml  diff_drive_gains.xml  group_gains.xml  mecanum_base_gains.xml
hebi_cpp_api_examples/config/hrdf/: 3_dof_arm.hrdf  A-2084-01-parallel-gripper.hrdf  A-2085-04-parallel-gripper.hrdf  A-2085-05-parallel-gripper.hrdf  A-2085-06-parallel-gripper.hrdf  A-2085-06.hrdf  A-2240-05.hrdf  A-2240-06-parallel-gripper.hrdf
hebi_cpp_api_examples/data/hexapod/: hex_config.xml
hebi_cpp_api_examples/data/paths/: 6_dof_circle.txt
hebi_cpp_api_examples/data/waypoints/: 6_dof_home.txt  6_dof_pick.txt  6_dof_place.txt  6_dof_stow.txt
hebi_cpp_api_examples/launch/: arm_moveit_node.launch  arm_node.launch  arm_teach_repeat_6_dof.launch  daisy.launch  daisy_with_5dof_arm.launch  diff_drive_control.launch  diff_drive_node.launch  group_node_basic.launch  mecanum_base_control.launch  mecanum_base_node.launch  omni_base_control.launch  omni_base_node.launch  rosie_teach_repeat.launch  tready_base.launch  tready_base_w_arm.launch
hebi_cpp_api_examples/msg/: FlipperVelocityCommand.msg  OffsetPlayback.msg  Playback.msg  TreadedBaseState.msg
hebi_cpp_api_examples/scripts/: group_setpoint_control.py
hebi_cpp_api_examples/src/: README.md
hebi_cpp_api_examples/src/basic/: group_node.cpp
hebi_cpp_api_examples/src/integrations/clearpath_jackal/: README.md  jackal_arm.launch  jackal_arm_gazebo.launch  jackal_arm_teleop.py  jackal_base_station.launch  jackal_hebi.urdf.xacro  jackal_to_hebi.urdf  rviz_config.rviz
hebi_cpp_api_examples/src/kits/arm/: README.md  arm_moveit_node.cpp  arm_node.cpp  arm_teach_repeat_node.cpp  arm_teach_repeat_node.hpp  gripper_moveit_node.cpp  gripper_node.cpp
hebi_cpp_api_examples/src/kits/base/: README.md  diff_drive_node.cpp  mecanum_base_node.cpp  omni_base_controller_node.cpp  omni_base_node.cpp
hebi_cpp_api_examples/src/kits/daisy/: controller_node.cpp  hexapod_control.cpp
hebi_cpp_api_examples/src/kits/daisy/input/: mobile_io.cpp  mobile_io.hpp
hebi_cpp_api_examples/src/kits/daisy/robot/: hexapod.cpp  hexapod.hpp  hexapod_parameters.cpp  hexapod_parameters.hpp  leg.cpp  leg.hpp  step.cpp  step.hpp
hebi_cpp_api_examples/src/kits/daisy/xml_util/: xml_helpers.cpp  xml_helpers.hpp
hebi_cpp_api_examples/src/kits/rosie/: README.md  teach_repeat_controller_node.cpp
hebi_cpp_api_examples/src/kits/tready/: colors.hpp  treaded_base_node.cpp
hebi_cpp_api_examples/src/kits/tready/control/: tready_control.cpp  tready_control.hpp
hebi_cpp_api_examples/src/kits/tready/robot/: treaded_base.cpp  treaded_base.hpp
hebi_cpp_api_examples/src/util/: diff_drive.cpp  diff_drive.hpp  mecanum_base.cpp  mecanum_base.hpp  mobile_io.cpp  mobile_io.hpp  odom_publisher.cpp  odom_publisher.hpp  omni_base.cpp  omni_base.hpp  path.cpp  path.hpp  waypoint.cpp  waypoint.hpp
hebi_cpp_api_examples/srv/: SetCommandLifetime.srv  SetFeedbackFrequency.srv  SetGains.srv  SetIKSeed.srv
hebi_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
hebi_description/meshes/: A-2221-01-Inside.stl  A-2222-01-Outside.stl  PM-2291-01.stl  PM-2359-02.stl  PM-2360-02.stl  R8.stl
hebi_description/models/A-2084-01/: A-2084-01.sdf
hebi_description/models/A-2084-01-parallel-gripper/: A-2084-01-parallel-gripper.sdf  model.config
hebi_description/models/A-2085-04/: A-2085-04.sdf  model.config
hebi_description/models/A-2085-04-parallel-gripper/: A-2085-04-parallel-gripper.sdf  model.config
hebi_description/models/A-2085-05/: A-2085-05.sdf
hebi_description/models/A-2085-05-parallel-gripper/: A-2085-05-parallel-gripper.sdf  model.config
hebi_description/models/A-2085-06/: A-2085-06.sdf
hebi_description/models/A-2085-06-parallel-gripper/: A-2085-06-parallel-gripper.sdf  model.config
hebi_description/scripts/: generate_pipeline.bash  generate_pipeline_batch.bash  hrdf_convert  urdf_generator.py
hebi_description/urdf/: actuator.xacro  bracket.xacro  end_effector.xacro  hebi.xacro  link.xacro
hebi_description/urdf/kits/: A-2084-01-parallel-gripper.xacro  A-2084-01.xacro  A-2085-04-parallel-gripper.xacro  A-2085-04.xacro  A-2085-05-parallel-gripper.xacro  A-2085-05.xacro  A-2085-06-parallel-gripper.xacro  A-2085-06.xacro
hebi_gazebo/: CMakeLists.txt  README.md  package.xml
hebi_gazebo/launch/: arm_moveit_simulation.launch  arm_simulation.launch
hebi_gazebo/scripts/: setup_environment.bash
hebi_gazebo/worlds/: basic_test.world  scara_world.world
hebi_moveit_configs/hebi_a-2084-01-parallel-gripper_moveit_config/: CMakeLists.txt  package.xml
interactive_marker_twist_server-kinetic-devel/: CHANGELOG.rst  CMakeLists.txt  package.xml
interactive_marker_twist_server-kinetic-devel/src/: marker_server.cpp
(+207 files in other folders)
