<?xml version="1.0"?>
<package>
  <name>hebi_description</name>
  <version>0.1.0</version>
  <description>ROS models for HEBI components</description>

  <maintainer email="matt@hebirobotics.com">Matthew Tesch</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/hebi_description</url>
  <url type="repository">https://github.com/HebiRobotics/hebi_description.git</url>
  <url type="bugtracker">https://github.com/HebiRobotics/hebi_description/issues</url>

  <author email="matt@hebirobotics.com">Matthew Tesch</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>

  <export>
  </export>
</package>
