<?xml version="1.0"?>
<package format="2">
  <name>interactive_marker_twist_server</name>
  <version>1.2.2</version>
  <description>Interactive control for generic Twist-based robots using interactive markers</description>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ros-visualization/interactive_marker_twist_server</url>
  <url type="bugtracker">https://github.com/ros-visualization/interactive_marker_twist_server/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>interactive_markers</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>roslint</test_depend>
</package>
